Changes for ticket #13978 Point 3 .Internet Explorer problems with Archivia of List Evento.

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -718,7 +718,7 @@ function loadScript(url, callback){
 					var ids = [];
 					var $rows = $(".datatable-responsive-eventi-provider").DataTable().rows('.selected').data();
 					for(var i = 0; i < $rows.length; i++) {
-						var id = Number.parseInt((($rows[i][0]).match(/\d+\.\d+|\d+\b|\d+(?=\w)/g) || [] ).map(function (v) {return +v;}).shift());
+						var id = parseInt((($rows[i][0]).match(/\d+\.\d+|\d+\b|\d+(?=\w)/g) || [] ).map(function (v) {return +v;}).shift());
 						ids.push(id);
 					}
 
