--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -578,6 +578,12 @@ h2 {
 	display: block;
 }
 
+.negativo-result {
+	color: #d9534f;
+	font-weight: bold;
+	
+}
+
 .value-edit {
 	padding-top: 8px;
 	padding-left: 10px;
