--- a/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoEdit.html
+++ b/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoEdit.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{${eventoWrapper.evento.new} ? label.creazione_nuovo_evento : label.modifica_evento}">Evento</h2>
+						<h2 th:text="#{${eventoWrapper.evento.new} ? label.creazione_nuovo_evento_piano_formativo : label.modifica_evento}">Evento</h2>
 						<div class="pull-right buttons-header">
 							<th:block th:unless="${#lists.isEmpty(eventoWrapper.idEditabili)}">
 								<label class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
