--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -666,6 +666,11 @@ h2 {
 	text-decoration: underline;
 }
 
+.black-danger {
+	color: #000000;
+	text-decoration: underline;
+}
+
 .row-group {
 	background-color: #337ab7 !important;
 	color: #fff;
@@ -1536,7 +1541,7 @@ table.dataTable tbody tr.selected {
 }
 
 .logo-provider {
-	color: #d9534f;
+	color: #000000;
 }
 
 /* ERM015130 */
