--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -61,7 +61,7 @@
 								</th:block>
 
 								<h2 th:text="#{label.info_evento}"></h2>
-								
+
 								<!-- VERSIONE -->
 								<div class="item form-group">
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -84,7 +84,7 @@
 										</div>
 									</div>
 								</div>
-								
+
 								<div class="divider-dashed"></div>
 
 								<!-- TIPO EVENTO -->
@@ -177,8 +177,6 @@
 										</div>
 									</div>
 								</div>
-								
-								
 
 								<!-- TIPOLOGIA DELL'EVENTO FAD-->
 								<div class="item form-group select-tipologia-FAD" style="display: none">
@@ -251,8 +249,8 @@
 										<span th:text="#{label.obiettivo_strategico_nazionale}">Obiettivo Strategico Nazionale</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-										<select id="obiettivoNazionale"
-											multiple="multiple" class="selectpicker"
+										<select
+											multiple="multiple" class="selectpicker obiettivoNazionale"
 											th:field="${ricercaEventoWrapper.obiettiviNazionaliSelezionati}"
 											data-width="100%" data-style="btn-primary"
 											data-actions-box="true" data-size="10"
@@ -264,6 +262,25 @@
 												th:remove="all-but-first">
 												<option
 													th:each="obiettivoNazionale, row: ${ricercaEventoWrapper.obiettiviNazionaliList}"
+													th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
+													th:value="${obiettivoNazionale.id}"
+													th:text="${obiettivoNazionale.nome}">
+												</option>
+											</optgroup>
+										</select>
+										<select
+											multiple="multiple" class="selectpicker obiettivoNazionaleVersione1"
+											th:field="${ricercaEventoWrapper.obiettiviNazionaliSelezionatiVersione1}"
+											data-width="100%" data-style="btn-primary"
+											data-actions-box="true" data-size="10"
+											data-hide-disabled="false"
+											title="Seleziona un obiettivo...">
+											<optgroup class="optgroup-primary"
+												th:each="categoriaObiettivoNazionale, row: ${T(it.tredi.ecm.dao.enumlist.CategoriaObiettivoNazionale).values()}"
+												th:label="${categoriaObiettivoNazionale.nome}"
+												th:remove="all-but-first">
+												<option
+													th:each="obiettivoNazionale, row: ${ricercaEventoWrapper.obiettiviNazionaliListVersione1}"
 													th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
 													th:value="${obiettivoNazionale.id}"
 													th:text="${obiettivoNazionale.nome}">
@@ -776,11 +793,30 @@
 								$(".tipologia-FAD").on("ifUnchecked", function() {
 									mostraNascondiTipologia(false,'FAD');
 								});
+								
+								$(".versione").on("ifChecked", function() {
+									mostraObiettiviPerVersione($(this).val());
+								});
+
+								mostraObiettiviPerVersione('2');
 
 							});
 
 							function submitCerca(){
 								$("#submitButton").click();
+							}
+
+							function mostraObiettiviPerVersione(value) {
+								if(value == '1') {
+									$(".obiettivoNazionale").hide();
+									$(".obiettivoNazionale").selectpicker('deselectAll');									
+									$(".obiettivoNazionaleVersione1").show();
+								}
+								else {
+									$(".obiettivoNazionaleVersione1").hide();
+									$(".obiettivoNazionaleVersione1").selectpicker('deselectAll');									
+									$(".obiettivoNazionale").show();
+								}
 							}
 
 							//funzione per l'abilita / disabilita le discipline selezionabili in base alle professioni
