Changes in Valutazione Dati della Struttura

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -768,7 +768,8 @@
 								<th:block th:if="${valutabile}">
 			                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
 			                    		<div>
-				              				<span class="bold" th:text="#{label.tempo_indeterminato} + ': '"></span><span th:text="${datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneTempoIndeterminato}"></span>
+				              				<span class="bold" th:text="#{label.numero_dipendenti} + ': '"></span><span th:text="${datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneTempoIndeterminato}"></span>
+				              				<!-- <span class="bold" th:text="#{label.tempo_indeterminato} + ': '"></span><span th:text="${datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneTempoIndeterminato}"></span>-->
 			                    		</div>
 			                    		<div>
 				              				<span class="bold" th:text="#{label.altro_personale} + ': '"></span><span th:text="${datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneAltro}"></span>
