Marking EVENTO_VERSIONE i punti del codice in cui c'è logica legata al versioning degli eventi

--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -17,7 +17,7 @@
 					</div>
 					<div class="modal-body">
 						<th:block th:each="confirm, row: ${eventoWrapper.eventoConfirmWrapper.confirms}">
-						
+
 						<th:block th:if="${confirm instanceof T(it.tredi.ecm.web.confirm.FSCTutorPartecipantiConfirm)}">
 							<div>
 								<label class="value" th:text="#{label.alert_fsc_tutor_partecipanti}"></label>
@@ -33,14 +33,14 @@
 								<label class="value" th:if="${confirm.oldValueCrediti == confirm.newValueCrediti}" th:text="#{label.notifica_non_cambio_crediti(${confirm.newValueCrediti}, ${confirm.creditiProposti})}"></label>
 							</div>
 						</th:block>
-						
+
 						<th:block th:if="${confirm instanceof T(it.tredi.ecm.web.confirm.FSCDocentiNonUtilizzatiConfirm)}">
 							<div>
 								<label th:if="${confirm.isMultiDocenti()}" class="value" th:text="#{label.alert_fsc_docenti_non_in_eventi(${confirm.getRuoliDocenzaNonUtilizzati()})}"></label>
 								<label th:unless="${confirm.isMultiDocenti()}" class="value" th:text="#{label.alert_fsc_docente_non_in_eventi(${confirm.getRuoliDocenzaNonUtilizzati()})}"></label>
 							</div>
 						</th:block>
-						
+
 						</th:block>
 					</div>
 					<div class="modal-footer">
@@ -533,7 +533,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<th:block th:include="evento/eventoVersione :: eventoVersione" />
 
 		<script src="../static/js/province.js" th:src="@{/js/province.js}"></script>
@@ -577,7 +577,7 @@
 				//modale conferma modifiche
 				if([[${eventoWrapper.eventoConfirmWrapper.confirmRequired}]])
 					$("#modale-conferma").modal("show");
-				
+
 				//init datatable responsabili scientifici
 			    reInitDataTableById('responsabiliScientifici');
 				/*
@@ -802,8 +802,8 @@
 
 				//partner
 			    mostraNascondiCampiPartner($(".partner:checked").val());
-				
-				
+
+
 				//radio alimenti prima infanzia
 				mostraNascondiRadioPrimaInfanzia($(".contenuto:checked").val(), $(".sponsor:checked").val());
 
@@ -850,6 +850,7 @@
 				mostraNascondiRadioPrimaInfanzia($(".contenuto:checked").val(), sponsorChecked);
 			}
 
+			// EVENTO_VERSIONE
 			//funzioni show/hide in base alle scelte effettuate (lato client)
 			//radio alimenti infanzia show/hide
 			//continua a valere per la versione 1
@@ -875,12 +876,12 @@
 						$(".infanzia-sponsor-no").slideUp("slow");
 					}
 				} else {//versione 2
-					// we are going back we will show as betore 
+					// we are going back we will show as betore
 					$(".numVers1").show();
 					$(".numVers2").hide();
-					
+
 					if(contenutiEvento == "ALIMENTAZIONE_PRIMA_INFANZIA" && sponsorChecked == "true") {
-						// scelta radio accesa e anche scelta file						
+						// scelta radio accesa e anche scelta file
 						$(".infanzia-sponsor-radio").slideDown("slow");
 						mostraNascondiAllegatiAutocertificazioniSponsor($(".sponsor-infanzia:checked").val());
 					}
@@ -890,12 +891,12 @@
 						$(".infanzia-sponsor-si").hide();
 						$(".infanzia-sponsor-no").show();
 					}else{
-						// tutta sezione spenta						
+						// tutta sezione spenta
 						$(".infanzia-sponsor-radio").hide();
 						$(".infanzia-sponsor-si").hide();
 						$(".infanzia-sponsor-no").hide();
 					}
-					
+
 				}
 			}
 
@@ -954,7 +955,7 @@
 /************************************************************************************************************************/
 
 
-
+			// EVENTO_VERSIONE
  			//reinizializzazione delle datatable singole by id
 			function reInitDataTableById(target){
  				console.log("reinit by id called! - target: " + target);
@@ -962,7 +963,7 @@
  				//destroy della datatable prima della reinizializzazione
  				$("#"+target).DataTable().destroy();
 				var buttonColumn;
-				//indica se mostrare le colonne Identificativo e svolgeAttivitaDiDocenza 
+				//indica se mostrare le colonne Identificativo e svolgeAttivitaDiDocenza
 				var showExtCols = false;
 				switch(target) {
 					case "responsabiliScientifici":
@@ -994,7 +995,7 @@
 							showExtCols = true;
 						} else {
 							showExtCols = false;
-						} 
+						}
 					$('#'+target).DataTable({
 						"bFilter" : false,
 						"bInfo" : false,
@@ -1097,7 +1098,7 @@
 			    });
 		  	}
 
-
+			// EVENTO_VERSIONE
 			//apre la finestra di inserimento di una persona
 			//pulisce il binding del lookup se clean == true
 			function openAddPersonaTo(target,type,fromLookup,modificaElemento,clean){
@@ -1157,7 +1158,7 @@
 							$("#container-qualifica").hide();
 							//per EventoRES devo sistemare la select di inserimento del ruolo che cambia da versione 1 a 2
 							updatePersonaEventoRuoliDisponibili();
-							
+
 							$("#container-ruolo").show();
 							$("#container-titolare").show();
 						}else if(target == 'investigatori'){
@@ -1205,8 +1206,8 @@
 				if(isRes()){
 					console.log('updatePersonaEventoRuoliDisponibili: EvenoRES');
 					var selectId = '#personaevento-ruolo';
-					var versione = getVersione();					
-					var precVal = $(selectId).val(); 
+					var versione = getVersione();
+					var precVal = $(selectId).val();
 
 					$(selectId).selectpicker('val','');
 					$(selectId).prop('disabled',false);
@@ -1218,7 +1219,7 @@
 							$(this).hide();
 						}
 					});
-					
+
 					if(precVal !== undefined && precVal != '') {
 						if(versione === 2 || precVal != 'MODERATORE')
 							$(selectId).val(precVal);
@@ -1226,7 +1227,7 @@
 					$(selectId).selectpicker('refresh');
 				}
 			}
-			
+
 			//chiude la modale di inserimento di una persona svuotandone i contenuti
 			function closeModaleAddPersona(){
 				console.log('closeModaleAddPersona')
@@ -1612,6 +1613,7 @@
 				<label class="col-xs-offset-4 col-xs-4" th:text="${#lists.size(eventoWrapper.responsabiliScientifici)}"></label>
 				<label class="col-xs-offset-4 col-xs-4" th:text="#{label.nessun_responsabile_registrato}"></label>
 			</th:block> -->
+			<!-- // EVENTO_VERSIONE -->
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione() and !#authentication.principal.account.isSegreteria()},
 					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo() and !#authentication.principal.hasProfile('SEGRETERIA')},
 					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
@@ -1626,7 +1628,7 @@
 				ruoliRespScient = [[${eventoWrapper.getListRuoloFSCEnumPerResponsabiliScientificiDocenti()}]];
 			/*]]>*/
 			</script>
-		
+
 			<table id="responsabiliScientifici" class="datatable-responsive-responsabili no-order table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad-table'">
 				<thead>
@@ -2058,26 +2060,26 @@
 										<th th:text="#{label.ore_attivita}" class="no-sort">ORE ATTIVITA'</th>
 										<th class="no-sort">
 											<div class="evento-button-container">
-												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivita" class="btn btn-success evento-table-button" th:title="#{label.inserisci_attivita}" 
+												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivita" class="btn btn-success evento-table-button" th:title="#{label.inserisci_attivita}"
 													th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'\', undefined, true)'" data-toggle="modal" data-target=".modal-add-attivitaRES">
 													<span><i class="fa fa-plus"></i></span>
 												</a>
-												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaPausa" class="btn btn-success evento-table-button" th:title="#{label.inserisci_pausa}" 
+												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaPausa" class="btn btn-success evento-table-button" th:title="#{label.inserisci_pausa}"
 													th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'PAUSA\', undefined, true)'" data-toggle="modal" data-target=".modal-add-attivitaRES">
 													<span><i class="fa fa-pause-circle-o"></i></span>
 												</a>
-												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaValutazioneApprendimento" class="btn btn-success evento-table-button" 
-													th:title="#{label.inserisci_valutazione_apprendimento}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'VALUTAZIONE APPRENDIMENTO\', undefined, true)'" 
+												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaValutazioneApprendimento" class="btn btn-success evento-table-button"
+													th:title="#{label.inserisci_valutazione_apprendimento}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'VALUTAZIONE APPRENDIMENTO\', undefined, true)'"
 													data-toggle="modal" data-target=".modal-add-attivitaRES">
 													<span><i class="fa fa-pencil"></i></span>
 												</a>
-												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaRegistrazionePartecipanti" class="btn btn-success evento-table-button" 
-													th:title="#{label.inserisci_registrazione_partecipanti}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'REGISTRAZIONE PARTECIPANTI\', undefined, true)'" 
+												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaRegistrazionePartecipanti" class="btn btn-success evento-table-button"
+													th:title="#{label.inserisci_registrazione_partecipanti}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'REGISTRAZIONE PARTECIPANTI\', undefined, true)'"
 													data-toggle="modal" data-target=".modal-add-attivitaRES">
 													<span><i class="fa fa-group"></i></span>
 												</a>
-												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaSalutiIntroduttivi" class="btn btn-success evento-table-button attivitaSalutiIntroduttivi" 
-													th:title="#{label.inserisci_saluti_introduttivi}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'SALUTI INTRODUTTIVI\', undefined, true)'" 
+												<a th:unless="${isRiedizione or isEditSemiBloccato or eventoWrapper.hasRiedizioni}" id="add-attivitaSalutiIntroduttivi" class="btn btn-success evento-table-button attivitaSalutiIntroduttivi"
+													th:title="#{label.inserisci_saluti_introduttivi}" th:onclick="'openAddAttivitaTo(\'attivitaRES\',__${data.key}__,\'SALUTI INTRODUTTIVI\', undefined, true)'"
 													data-toggle="modal" data-target=".modal-add-attivitaRES">
 													<span><i class="fa fa-newspaper-o"></i></span>
 												</a>
@@ -2524,6 +2526,6 @@
 			</th:block>
 		</th:block>
 	</th:block>
-	
+
 </body>
 </html>
