--- a/src/main/resources/templates/evento/eventoVersione.html
+++ b/src/main/resources/templates/evento/eventoVersione.html
@@ -9,13 +9,14 @@
 
 		<script th:inline="javascript">
 		/*<![CDATA[*/
+				// EVENTO_VERSIONE
 				var eventoType = [[${eventoWrapper.evento.getClass().getSimpleName()}]];
 				var eventoVersione = [[${eventoWrapper.evento.getVersione()?.getNumeroVersione()}]];
-		
+
 				//var eventoVersionDefault = [[@{|${@ecmProperties.getEventoVersioneDefault().getNumeroVersione()}|}]];
 				var eventoVersionDefault = [[${@ecmProperties.getEventoVersioneDefault().getNumeroVersione()}]];
 				var eventoDataPassaggioVersioneDue = new Date([[@{${@ecmProperties.getEventoDataPassaggioVersioneDue().getYear()}}]], [[@{${@ecmProperties.getEventoDataPassaggioVersioneDue().getMonthValue() - 1}}]], [[@{${@ecmProperties.getEventoDataPassaggioVersioneDue().getDayOfMonth()}}]], 0, 0, 0, 0);
-				
+
 				function getEventoDataInizio() {
 					var toRet = null;
 					var dataInizio = $('#dataInizio').val();
@@ -28,11 +29,11 @@
 					}
 					return toRet;
 				}
-				
+
 				function isFad() {
 					return eventoType === 'EventoFAD';
 				}
-				
+
 				function isFsc() {
 					return eventoType === 'EventoFSC';
 				}
@@ -54,7 +55,7 @@
 							} else {
 								versione = 1;
 							}
-						}						
+						}
 					} else {
 						versione = eventoVersione;
 					}
@@ -65,7 +66,7 @@
 		</script>
 	</th:block>
 
-	
-	
+
+
 </body>
 </html>
